Use blades instead of components for book resource custom pages and add activity logs and charts in the dashboard

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "alexjustesen/filament-spatie-laravel-activitylog": "^0.6.3",
         "filament/filament": "^2.0",
+        "flowframe/laravel-trend": "^0.1.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/jetstream": "^3.0",
